--- a/css/main.css
+++ b/css/main.css
@@ -90,19 +90,25 @@ FOOTER
 ***********************************/
 
 footer {
+  margin: 30px 0;
+  padding: 5px 0 0 0;
+  width: 100%;
   font-size: 0.75em;
   text-align: center;
   clear: both;
-  padding-top: 50px;
   color: #ccc;
 }
 
 .social-icon {
+  opacity: .75;
   width: 20px;
   height: 20px;
-  margin: 0 5px;
+  margin: 0 2px;
 }
 
+.social-icon:hover {
+  opacity: 1;
+}
 
 
 /**********************************
@@ -165,6 +171,13 @@ PAGE: CONTACT
   margin: 0 0 10px;
 }
 
+.contact-info a:hover {
+  transform: scale(1.08,1.1);
+  -webkit-transform: scale(1.08,1.1);
+  -moz-transform: scale(1.08,1.1);
+  -o-transform: scale(1.08,1.1);
+}
+
 .contact-info li.phone a {
   background-image: url('../img/phone.png');
 }
@@ -220,6 +233,10 @@ nav a.selected, nav a:hover {
   color: #32673f;
 }
 
+/* footer color */
+footer {
+  background-color: steelblue;
+}
 
 
 
