--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,7 +36,6 @@
     float: left;
     margin: 0 5% 80px 0;
   }
-  
 }
 
 @media screen and (min-width: 660px) {
@@ -74,8 +73,11 @@
     border-bottom: 5px solid #599a68;
     margin-bottom: 60px;
   }
-
-  
+  .social-icon {
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+}
 }
 
 
